[refactor] solving the WhereToMove problem with complexity O(N * M Log N + N * A_max)
* N Buildings
* M interest
* A_Max maximum amenities on any single building